xxx xxx xx xx:xx:xx UTC 2010

        0.48 release.

        Changes

        New features

        - There is a server_set_listening(bool) Lua extention function
          available since 0.47, which can be used to let a monotone server
          exit gracefully instead of having to be killed.

        Bugs fixed

        - In 0.46, spurious network disconnects could occur when transferring
          sufficiently large items (files, diffs, revisions). This was fixed
          in 0.47 but not noted in the release notes at that time
          (fixes monotone bug #28991).

        Other

Sun Mar 14 21:15:06 UTC 2010

        0.47 release.

        Changes

        - The default '<unknown>' author used by the git_export command has
          changed to 'Unknown <unknown>' and must be changed in existing author
          map files. The old '<unknown>' author will be rejected by the new
          validate_git_author lua hook.

        - The 'git_export' command now validates all git author and committer
          values using a new 'validate_git_author' lua hook before they are
          written to the output stream. The export will fail if any value is
          rejected by this hook.

        - The 'git_export' command now calls a new 'unmapped_git_author' lua
          hook for all git author values not found in the author map file. The
          default implementation of this hook attempts to produce valid git
          authors using several default pattern replacements.

        - The 'get_date_format_spec' lua hook now has an additional parameter
          which hints at the wanted format (f.e. a short date or a long date
          time). The default implementation now returns '%x' for short and
          long dates, '%X' for short and long times (currently unused) and
          '%x %X' for short and long date times.

        - The options '--date-format' and '--no-format-dates' are no longer
          specific to the 'log' command, but can now be used globally.
