@@ -6,6 +6,10 @@ xxx xxx xx xx:xx:xx UTC 2010
 
         New features
 
+        - 'automate update' is now supported.
+
+        - There is a new Lua extension function change_workspace.
+
         - There is a server_set_listening(bool) Lua extention function
           available since 0.47, which can be used to let a monotone server
           exit gracefully instead of having to be killed.
@@ -72,7 +76,7 @@ Sun Mar 14 21:15:06 UTC 2010
         - The various occurrences where a revision is described by its
           certs now come with proper localized date output.
 
-        - Fix problems with newer Lua versions especially when 
+        - Fix problems with newer Lua versions especially when
           LUA_COMPAT_VARARG not set.
 
         Other
